[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/posepal/setup_bones_popup/PolygonItem.gd" type="Script" id=1]

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 221, 221, 221, 99, 223, 223, 223, 178, 223, 223, 223, 229, 223, 223, 223, 229, 223, 223, 223, 178, 221, 221, 221, 99, 222, 222, 222, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 24, 223, 223, 223, 186, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 186, 223, 223, 223, 24, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 223, 223, 223, 186, 224, 224, 224, 255, 223, 223, 223, 226, 221, 221, 221, 84, 214, 214, 214, 25, 214, 214, 214, 25, 222, 222, 222, 85, 223, 223, 223, 226, 224, 224, 224, 255, 223, 223, 223, 186, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 95, 224, 224, 224, 255, 223, 223, 223, 226, 212, 212, 212, 18, 216, 216, 216, 0, 214, 214, 214, 0, 214, 214, 214, 0, 217, 217, 217, 0, 212, 212, 212, 18, 223, 223, 223, 226, 224, 224, 224, 255, 222, 222, 222, 95, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 175, 224, 224, 224, 255, 223, 223, 223, 88, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 223, 223, 223, 88, 224, 224, 224, 255, 222, 222, 222, 175, 222, 222, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 225, 224, 224, 224, 255, 214, 214, 214, 25, 214, 214, 214, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 214, 214, 214, 25, 224, 224, 224, 255, 223, 223, 223, 225, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 230, 224, 224, 224, 255, 216, 216, 216, 20, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 214, 214, 214, 25, 224, 224, 224, 255, 223, 223, 223, 225, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 180, 224, 224, 224, 255, 222, 222, 222, 85, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 222, 222, 222, 86, 224, 224, 224, 255, 223, 223, 223, 179, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 98, 224, 224, 224, 255, 223, 223, 223, 225, 212, 212, 212, 18, 216, 216, 216, 0, 214, 214, 214, 0, 214, 214, 214, 0, 216, 216, 216, 0, 212, 212, 212, 18, 223, 223, 223, 225, 224, 224, 224, 255, 223, 223, 223, 97, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 187, 224, 224, 224, 255, 223, 223, 223, 226, 221, 221, 221, 84, 214, 214, 214, 25, 214, 214, 214, 25, 221, 221, 221, 84, 223, 223, 223, 226, 224, 224, 224, 255, 223, 223, 223, 187, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 214, 214, 214, 25, 223, 223, 223, 186, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 186, 223, 223, 223, 24, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 214, 214, 214, 0, 222, 222, 222, 0, 221, 221, 221, 100, 223, 223, 223, 178, 223, 223, 223, 229, 223, 223, 223, 229, 223, 223, 223, 178, 221, 221, 221, 100, 222, 222, 222, 0, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 221, 221, 221, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 0
flags = 0
image = SubResource( 6 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 247, 151, 151, 0, 250, 155, 155, 0, 251, 155, 155, 0, 251, 155, 155, 0, 241, 147, 147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 247, 151, 151, 0, 247, 151, 151, 32, 250, 155, 155, 187, 251, 155, 155, 240, 251, 155, 155, 144, 241, 147, 147, 19, 241, 147, 147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 155, 155, 0, 251, 155, 155, 169, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 154, 154, 145, 251, 154, 154, 0, 241, 147, 147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 155, 155, 0, 251, 155, 155, 234, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 248, 251, 155, 155, 146, 241, 147, 147, 19, 241, 147, 147, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 250, 154, 154, 0, 250, 154, 154, 181, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 250, 155, 155, 176, 250, 155, 155, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 154, 154, 0, 251, 155, 155, 77, 251, 155, 155, 249, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 240, 251, 155, 155, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 154, 154, 0, 251, 154, 154, 76, 251, 155, 155, 249, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 250, 155, 155, 190, 250, 155, 155, 0, 0, 0, 0, 0, 247, 153, 153, 0, 251, 155, 155, 0, 251, 155, 155, 0, 250, 154, 154, 0, 251, 154, 154, 76, 251, 155, 155, 249, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 249, 250, 155, 155, 180, 251, 154, 154, 237, 251, 155, 155, 167, 247, 153, 153, 35, 247, 153, 153, 0, 247, 153, 153, 0, 247, 153, 153, 35, 251, 155, 155, 167, 251, 155, 155, 238, 250, 154, 154, 181, 251, 155, 155, 248, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 249, 251, 153, 153, 78, 250, 154, 154, 0, 251, 154, 154, 0, 251, 155, 155, 0, 247, 153, 153, 0, 0, 0, 0, 0, 250, 155, 155, 0, 250, 155, 155, 190, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 249, 251, 154, 154, 79, 251, 153, 153, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 155, 155, 0, 251, 155, 155, 240, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 250, 251, 153, 153, 80, 251, 153, 153, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 250, 155, 155, 0, 250, 155, 155, 176, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 250, 154, 154, 181, 250, 153, 153, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 241, 147, 147, 0, 241, 147, 147, 19, 251, 155, 155, 146, 251, 155, 155, 248, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 154, 154, 232, 251, 154, 154, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 241, 147, 147, 0, 251, 154, 154, 0, 251, 154, 154, 145, 252, 156, 156, 255, 252, 156, 156, 255, 252, 156, 156, 255, 251, 155, 155, 169, 251, 155, 155, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 242, 145, 145, 0, 242, 145, 145, 21, 250, 154, 154, 173, 251, 155, 155, 252, 250, 155, 155, 188, 247, 151, 151, 32, 247, 151, 151, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 242, 145, 145, 0, 250, 154, 154, 0, 251, 155, 155, 0, 250, 155, 155, 0, 247, 151, 151, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 0
flags = 0
image = SubResource( 7 )
size = Vector2( 16, 16 )

[node name="PolygonItem" type="HBoxContainer"]
anchor_right = 0.183
margin_right = 164.608
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="SeparatorHBox" type="HBoxContainer" parent="."]
margin_bottom = 40.0

[node name="ExpandButton" type="TextureButton" parent="."]
margin_left = 4.0
margin_right = 24.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = 28.0
margin_right = 48.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="."]
margin_left = 52.0
margin_top = 13.0
margin_right = 184.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Node"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 188.0
margin_right = 192.0
margin_bottom = 40.0

[node name="BoneButton" type="TextureButton" parent="."]
margin_left = 196.0
margin_right = 216.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 3

[node name="BoneLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 13.0
margin_right = 352.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Bone"
align = 1
valign = 1
clip_text = true
